--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
 	     </div>
 	  </div>
 	</div>
+
+	<div style='position:absolute;bottom:0px;right:0px;z-index:999; padding:4px; '> <a style='color:#000;' href='credits.txt'>credits </a></div>
 </body>
 </html>
