Clean up + add ability to place trees

--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -17,12 +17,12 @@
 	  	</li>
 	  	<li class="dropdown-submenu"><a href="#"> <i class='icon-leaf pull-right'></i> Landscaping</a>
 	  		<ul class="dropdown-menu">
-	  			<li><a href="#">Trees</a></li>
+	  			<li><a href="#" data-tile='trees'>Trees</a></li>
 	  			<li><a href="#">Lake</a></li>
 	  			<li><a href="#">Carpark</a></li>
 	  		</ul>
 	  	</li>
 	  	<li class="divider"></li>
-	  	<li><a href="#" data-tile='grass'> <i class='icon-warning-sign pull-right '></i>  Bulldoser</a></li>
+	  	<li><a href="#" data-tile='grass'> <i class='icon-warning-sign pull-right '></i>  Bulldozer</a></li>
 	</ul>
 </div>
