--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="UTF-8">
-    <title>University Simulator</title>
+    <title>Model-Uni - Run your own university</title>
 
     <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css' />
 	<style>
