Basic save / load functionality + menu ui

--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -1,4 +1,4 @@
-<div id='ui_build_menu' class='ui-element' style='top:50px;left:10px;'>
+<div id='ui_build_menu' class='ui-element  game-ui' style='top:50px;left:10px;'>
 	<ul class="dropdown-menu" style='display:block;'>
 		<li><strong style='padding:15px;'>Construction</strong></li>
 		<li class="divider"></li>
