Fix tile selection bug (wasn't allowing multiple corrections on same cell select)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				     <li><a href="#" onclick='game.save_game();'>Save Game</a></li>
 				      <li><a href="#" onclick='game.load_game();'>Load game</a></li>
 				      <li class='divider'></li>
-				      <li><a href="#">New Game</a></li>
+				      <li><a href="#" onclick='game.new_game();'>New Game</a></li>
 				  </ul>
 				</li>
 	     </div>
