--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -1,11 +1,19 @@
-<div id='ui_build_menu' class='ui-element  game-ui' style='top:50px;left:10px;'>
-	<ul class="dropdown-menu" style='display:block;'>
-		<li><strong style='padding:15px;'>Construction</strong></li>
+<div id='ui_build_menu' class='ui-element game-ui' style='top:50px;left:10px;'>
+	<ul class="dropdown-menu" style='display:block;width:200px;'>
+		<li><strong style='padding:15px;'>Construction Menu</strong></li>
 		<li class="divider"></li>
-	  	<li class='active'><a data-tile='road'> <i class='icon-road pull-right'></i> Paths</a></li>
 
-	  	<li class="dropdown-submenu"><a href="#"> <i class='icon-wrench pull-right'></i> Buildings</a>
-	  		<ul class="dropdown-menu">
+
+	  	<li class="slidedown-submenu">
+	  		<a href="#"> <i class='icon-road pull-right'></i> Paths</a>
+	  		<ul class="slidedown-menu" style='display:block'>
+	  			<li class='active'><a data-tile='road' href="#">Basic path <span class='cost'>&pound;10</span></a></li>
+	  		</ul>
+	  	</li>
+
+	  	<li class="slidedown-submenu">
+	  		<a href="#"> <i class='icon-wrench pull-right'></i> Buildings</a>
+	  		<ul class="slidedown-menu">
 	  			<li><a href="#">Small lecture Theatre</a></li>
 	  			<li><a href="#">Large lecture Theatre</a></li>
 	  			<li><a href="#">Student flats</a></li>
@@ -15,14 +23,15 @@
 	  			<li><a href="#">Registry</a></li>
 	  		</ul>
 	  	</li>
-	  	<li class="dropdown-submenu"><a href="#"> <i class='icon-leaf pull-right'></i> Landscaping</a>
-	  		<ul class="dropdown-menu">
+	  	<li class="slidedown-submenu">
+	  		<a href="#"> <i class='icon-leaf pull-right'></i> Landscaping</a>
+	  		<ul class="slidedown-menu">
 	  			<li><a href="#" data-tile='trees'>Trees</a></li>
 	  			<li><a href="#">Lake</a></li>
 	  			<li><a href="#">Carpark</a></li>
 	  		</ul>
 	  	</li>
 	  	<li class="divider"></li>
-	  	<li><a href="#" data-tile='grass'> <i class='icon-warning-sign pull-right '></i>  Bulldozer</a></li>
+	  	<li class='action'><a href="#" data-tile='grass'> <i class='icon-warning-sign pull-right '></i>  Bulldozer</a></li>
 	</ul>
 </div>
