Spec out dialog boxs

--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -35,3 +35,45 @@
 	  	<li class='action'><a href="#" data-tile='grass'> <i class='icon-warning-sign pull-right '></i>  Bulldozer</a></li>
 	</ul>
 </div>
+
+<div id='ui_save_dialog' class="modal hide game-ui">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>Save</h3>
+  </div>
+  <div class="modal-body">
+    <p>Save slot 1</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn" onclick="$(this).parent().parent().hide();">Close</a>
+    <a href="#" class="btn btn-primary disabled">Save Game</a>
+  </div>
+</div>
+
+<div id='ui_course' class="modal hide model-big game-ui" style='width:80%;'>
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>Save</h3>
+  </div>
+  <div class="modal-body">
+    <p>Save slot 1</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn" onclick="$(this).parent().parent().modal('hide');">Close</a>
+    <a href="#" class="btn btn-primary disabled">Save Game</a>
+  </div>
+</div>
+
+<div id='ui_hire_staff' class="modal hide model-big game-ui" style='width:80%;'>
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>Hire Staff</h3>
+  </div>
+  <div class="modal-body">
+    <p>Save slot 1</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn" onclick="$(this).parent().parent().modal('hide');">Close</a>
+    <a href="#" class="btn btn-primary disabled">Save Game</a>
+  </div>
+</div>
