--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 
 
 	    }
+
+	    .model-big {
+	    	width:80%;
+	    	margin:0;
+	    	left:10%;
+	    }
 	    .slidedown-menu>li>a {
 	    	display: block;
 	    	padding: 3px 20px;
@@ -59,7 +65,7 @@
 	    <a class="brand" href="#">Model Uni</a>
 	     <ul class="nav pull-right">
 	     	  <li><a href="#">Courses</a></li>
-	     	  <li><a href="#">Staff</a></li>
+	     	  <li><a href="#" onclick="game.ui.showHireDialog();">Staff</a></li>
 	     	  <li><a href="#">Finances</a></li>
 	     	  <li class='divider'></li>
 
