--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -1,5 +1,5 @@
 <div id='ui_build_menu' class='ui-element game-ui' style='top:50px;left:10px;'>
-	<ul class="dropdown-menu" style='display:block;width:200px;'>
+	<ul class="dropdown-menu" style='display:block;width:200px;position: static;'>
 		<li><strong style='padding:15px;'>Construction Menu</strong></li>
 		<li class="divider"></li>
 
@@ -34,6 +34,14 @@
 	  	<li class="divider"></li>
 	  	<li class='action'><a href="#" data-tile='grass'> <i class='icon-warning-sign pull-right '></i>  Bulldozer</a></li>
 	</ul>
+	
+	<div class="dropdown-menu" style='display:block;width:200px;clear:both;position: static;'>
+		<div style='padding:5px 10px'>
+			Total cash: &pound;200<br/> 
+			<small>Jan 10 2012 - 2:30pm</small>
+		</div>
+	</div>
+
 </div>
 
 <div id='ui_save_dialog' class="modal hide game-ui">
