Buildings "exist" but don't render

--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -14,10 +14,12 @@
 	  	<li class="slidedown-submenu">
 	  		<a href="#"> <i class='icon-wrench pull-right'></i> Buildings</a>
 	  		<ul class="slidedown-menu">
+	  			<li><a href="#" data-building='smallhouse'>Student houses</a></li>
+
 	  			<li><a href="#">Small lecture Theatre</a></li>
 	  			<li><a href="#">Large lecture Theatre</a></li>
 	  			<li><a href="#">Student flats</a></li>
-	  			<li><a href="#">Student houses</a></li>
+	  			
 	  			<li><a href="#">Student bar</a></li>
 	  			<li><a href="#">Library</a></li>
 	  			<li><a href="#">Registry</a></li>
