--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -15,7 +15,7 @@
 	  		<a href="#"> <i class='icon-wrench pull-right'></i> Buildings</a>
 	  		<ul class="slidedown-menu">
 	  			<li><a href="#" data-building='smallhouse'>Student houses</a></li>
-
+	  			<li><a href="#" data-building='gym'>Student Gym</a></li>
 	  			<li><a href="#">Small lecture Theatre</a></li>
 	  			<li><a href="#">Large lecture Theatre</a></li>
 	  			<li><a href="#">Student flats</a></li>
