Tweak build/demolish tool functionality

--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -34,7 +34,7 @@
 	  		</ul>
 	  	</li>
 	  	<li class="divider"></li>
-	  	<li class='action'><a href="#" data-tile='grass'> <i class='icon-warning-sign pull-right '></i>  Bulldozer</a></li>
+	  	<li class='action'><a href="#" data-demolish='true'> <i class='icon-warning-sign pull-right '></i>  Bulldozer</a></li>
 	</ul>
 	
 	<div class="dropdown-menu" style='display:block;width:200px;clear:both;position: static;'>
