Add library v1 (tweak render code), although looks like may have to change tile rendering direction

--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -21,7 +21,7 @@
 	  			<li><a href="#">Student flats</a></li>
 	  			
 	  			<li><a href="#">Student bar</a></li>
-	  			<li><a href="#">Library</a></li>
+	  			<li><a href="#" data-building='library' >Library</a></li>
 	  			<li><a href="#">Registry</a></li>
 	  		</ul>
 	  	</li>
