--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="UTF-8">
-    <title>Model-Uni - Run your own university</title>
+    <title>Model-Uni - Create and run your own University!</title>
 
     <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css' />
 
@@ -54,7 +54,6 @@
 
 	</style>
 
-	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="vendor/require.js"></script>
 	<script src="game/bootstrap.js"></script>
