Tween walking animations and simulate basic behaviors.
Need to figure out best way to draw world accounting of z-index's...

--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -39,8 +39,8 @@
 	
 	<div class="dropdown-menu" style='display:block;width:200px;clear:both;position: static;'>
 		<div style='padding:5px 10px'>
-			Total cash: &pound;200<br/> 
-			<small>Jan 10 2012 - 2:30pm</small>
+			Total cash: &pound;<span id='ui-cash-box'>200</span><br/> 
+			<small id='ui-date-box'>Jan 10 2012 - 2:30pm</small>
 		</div>
 	</div>
 
