Add "explore" behavior to keep AI busy.
Update room modifiers
Tweak UI

--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
 	  </div>
 
 
-	<div style='position:absolute;bottom:0px;right:0px;z-index:999; padding:4px; '> <a style='color:#000;' href='credits.txt'>credits </a></div>
+	<div style='position:absolute;bottom:0px;right:0px;z-index:999; padding:4px; '> <a style='color:#000;' target='_blank' href='credits.txt'>credits </a></div>
 </body>
 </html>
