--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -37,10 +37,20 @@
 	  	<li class='action'><a href="#" data-demolish='true'> <i class='icon-warning-sign pull-right '></i>  Bulldozer</a></li>
 	</ul>
 	
-	<div class="dropdown-menu" style='display:block;width:200px;clear:both;position: static;'>
-		<div style='padding:5px 10px'>
-			Total cash: &pound;<span id='ui-cash-box'>200</span><br/> 
-			<small id='ui-date-box'>Jan 10 2012 - 2:30pm</small>
+	<div class="dropdown-menu" style='display:block;width:200px;clear:both;position: static;font-size:0.9em;'>
+		<div style='padding:5px 10px' >
+
+			<div class="row-fluid">
+				<div class='span7'><span>Cash: &pound;</span><span id='ui-cash-box'>50,000</span></div>
+				<div class='span5' style='font-size:0.9em;'><span style='color:green;'>&#9650;300</span>/<span style='color:red;'> &#9660;400</span></div>
+			</div>
+			<div class="row-fluid">
+				<div class='span6'><span >Students: </span><span id='ui-student-population-box'>0</span></div>
+				<div class='span6'><span>Staff: </span><span id='ui-staff-population-box'>0</span></div>
+			</div>
+			<div style='padding:4px; border:solid 1px #ccc;'>
+				<small id='ui-date-box'>Jan 10 2012 - 2:30pm </small><span class='pull-right'>-/+</span>
+			</div>
 		</div>
 	</div>
 
