Add support for correctly saving & reloading students
Preserving current game state.

--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -89,7 +89,7 @@
   </div>
   <div class="modal-body contents">
     <p>Type: {type}</p>
-    <p>Residence: {residence}</p>
+    <p>Residence: {residence}/{capacity}</p>
     <p>Occupance: {occupancy}</p>
     <p>Running costs: &pound; {running_costs}</p>
   </div>
