--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -49,7 +49,8 @@
 				<div class='span6'><span>Staff: </span><span id='ui-staff-population-box'>0</span></div>
 			</div>
 			<div style='padding:4px; border:solid 1px #ccc;'>
-				<small id='ui-date-box'>Jan 10 2012 - 2:30pm </small><span class='pull-right'>-/+</span>
+				<small id='ui-date-box'>Jan 10 2012 - 2:30pm </small>
+				<span class='pull-right'><i class='icon-pause'></i><i class='icon-play'></i><i class='icon-forward'></i></span>
 			</div>
 		</div>
 	</div>
@@ -116,7 +117,17 @@
     <h3>Hire Staff</h3>
   </div>
   <div class="modal-body">
-    <p>Save slot 1</p>
+ <ul class="nav nav-tabs" id="myTab">
+  <li class="active"><a href="#home">Lecturers</a></li>
+  <li><a href="#profile">Campus Security</a></li>
+  <li><a href="#messages">Maintenance</a></li>
+</ul>
+ 
+<div class="tab-content">
+  <div class="tab-pane active" id="home">...</div>
+  <div class="tab-pane" id="profile">...</div>
+  <div class="tab-pane" id="messages">...</div>
+</div>
   </div>
   <div class="modal-footer">
     <a href="#" class="btn" onclick="$(this).parent().parent().modal('hide');">Close</a>
