--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -50,7 +50,10 @@
 			</div>
 			<div style='padding:4px; border:solid 1px #ccc;'>
 				<small id='ui-date-box'>Jan 10 2012 - 2:30pm </small>
-				<span class='pull-right'><i class='icon-pause'></i><i class='icon-play'></i><i class='icon-forward'></i></span>
+				<span class='pull-right speed-control'>
+					<i class='icon-pause icon-white' style='background-color:#000;' data-time='-1'></i>
+					<i class='icon-play' data-time='100'></i>
+				</span>
 			</div>
 		</div>
 	</div>
