Set start date, with induction the next day (based on house numbers)

--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -53,6 +53,7 @@
 				<span class='pull-right speed-control'>
 					<i class='icon-pause icon-white' style='background-color:#000;' data-time='-1'></i>
 					<i class='icon-play' data-time='100'></i>
+					<i class='icon-forward' data-time='20'></i>
 				</span>
 			</div>
 		</div>
