Add concept of money (loosely)

--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -7,28 +7,28 @@
 	  	<li class="slidedown-submenu">
 	  		<a href="#"> <i class='icon-road pull-right'></i> Paths</a>
 	  		<ul class="slidedown-menu" style='display:block'>
-	  			<li class='active'><a data-tile='road' href="#">Basic path <span class='cost'>&pound;10</span></a></li>
+	  			<li class='active'><a data-tile='road' href="#">Basic path <span class='cost'>&pound;50</span></a></li>
 	  		</ul>
 	  	</li>
 
 	  	<li class="slidedown-submenu">
 	  		<a href="#"> <i class='icon-wrench pull-right'></i> Buildings</a>
 	  		<ul class="slidedown-menu">
-	  			<li><a href="#" data-building='smallhouse'>Student houses</a></li>
-	  			<li><a href="#" data-building='gym'>Student Gym</a></li>
+	  			<li><a href="#" data-building='smallhouse'>Student houses <span class='cost'>&pound;5000</span></a></li>
+	  			<li><a href="#" data-building='gym'>Student Gym <span class='cost'>&pound;8000</span></a></li>
 	  			<li><a href="#">Small lecture Theatre</a></li>
 	  			<li><a href="#">Large lecture Theatre</a></li>
 	  			<li><a href="#">Student flats</a></li>
 	  			
 	  			<li><a href="#">Student bar</a></li>
-	  			<li><a href="#" data-building='library' >Library</a></li>
+	  			<li><a href="#" data-building='library' >Library <span class='cost'>&pound;20000</span></a></li>
 	  			<li><a href="#">Registry</a></li>
 	  		</ul>
 	  	</li>
 	  	<li class="slidedown-submenu">
 	  		<a href="#"> <i class='icon-leaf pull-right'></i> Landscaping</a>
 	  		<ul class="slidedown-menu">
-	  			<li><a href="#" data-tile='trees'>Trees</a></li>
+	  			<li><a href="#" data-tile='trees'>Trees <span class='cost'>&pound;150</span></a></li>
 	  			<li><a href="#">Lake</a></li>
 	  			<li><a href="#">Carpark</a></li>
 	  		</ul>
