--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	        overflow: hidden;
 	        background: skyblue;
 	        margin:0;
+	        position:fixed;
 	    }
 	    .navbar,.navbar-inner {margin:0px; border-radius:0px;}
 	    .ui-element {
@@ -50,6 +51,8 @@
 	    	background-color: #0081c2;
 	    	color:#fff;
 	    }
+
+	    .drag-handle {display:block; cursor:pointer;}
 
 
 	</style>
