Add shopholder + bugfix AI

--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -16,12 +16,16 @@
 	  		<ul class="slidedown-menu">
 	  			<li><a href="#" data-building='smallhouse'>Student houses <span class='cost'>&pound;5000</span></a></li>
 	  			<li><a href="#" data-building='gym'>Student Gym <span class='cost'>&pound;8000</span></a></li>
+          <li><a href="#" data-building='library' >Library <span class='cost'>&pound;20000</span></a></li>
+          <li><a href="#" data-building='campus_shop' >Campus shop <span class='cost'>&pound;7000</span></a></li>
+
+
 	  			<li><a href="#">Small lecture Theatre</a></li>
 	  			<li><a href="#">Large lecture Theatre</a></li>
 	  			<li><a href="#">Student flats</a></li>
 	  			
 	  			<li><a href="#">Student bar</a></li>
-	  			<li><a href="#" data-building='library' >Library <span class='cost'>&pound;20000</span></a></li>
+	  			
 	  			<li><a href="#">Registry</a></li>
 	  		</ul>
 	  	</li>
