--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
 	    .drag-handle {display:block; cursor:pointer;}
 
 
+	    #sjs0, body {
+		    -webkit-transition: all 3s ease-in-out;
+			-moz-transition: all 3s ease-in-out;
+			-o-transition: all 3s ease-in-out;
+			transition: all 3s ease-in-out;
+	    }
+
 	</style>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
