Tweak day-night animation + student AI. Add second shop model

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
 
 	    #sjs0, body {
-		    -webkit-transition: all 3s ease-in-out;
-			-moz-transition: all 3s ease-in-out;
-			-o-transition: all 3s ease-in-out;
-			transition: all 3s ease-in-out;
+		    -webkit-transition: background 2s ease-in-out, opacity 2s ease-in-out;
+			-moz-transition: background 2s ease-in-out, opacity 2s ease-in-out;
+			-o-transition: background 2s ease-in-out, opacity 2s ease-in-out;
+			transition: background 2s ease-in-out, opacity 2s ease-in-out;
 	    }
 
 	</style>
