--- a/game/client/ui.html
+++ b/game/client/ui.html
@@ -18,7 +18,7 @@
 	  			<li><a href="#" data-building='gym'>Student Gym <span class='cost'>&pound;8000</span></a></li>
           <li><a href="#" data-building='library' >Library <span class='cost'>&pound;20000</span></a></li>
           <li><a href="#" data-building='campus_shop' >Campus shop <span class='cost'>&pound;7000</span></a></li>
-
+           <li><a href="#" data-building='campus_shop2' >Student shop <span class='cost'>&pound;7000</span></a></li>
 
 	  			<li><a href="#">Small lecture Theatre</a></li>
 	  			<li><a href="#">Large lecture Theatre</a></li>
